Refs #140518 - Fix spacing.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -1269,7 +1269,8 @@ div.answers-section {
     padding-left: 40px !important;
 
     div.answers-wrapper {
-      padding-left: 0px !important;
+      padding-right: 0px;
+      padding-left: 0px;
     }
 
     .answers-list {
